Restore JDK 1.3 compatibility.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/pool/branches/1_4_RELEASE_BRANCH@606064 13f79535-47bb-0310-9956-ffa450edef68